apps/excalidraw/excalidraw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
      component: frontend
  template:
    metadata:
      labels:
        app: excalidraw
        component: frontend
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          command: ["/bin/sh"]
          args:
            - -c
            - |
              find /usr/share/nginx/html/assets -type f -name "*.js" \
                -exec sed -i "s|https://oss-collab\.excalidraw\.com|https://draw.shedy.xyz|g" {} +
              nginx -g 'daemon off;'
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 32Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 200m
