apps/excalidraw/room-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw-room
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
      component: room
  template:
    metadata:
      labels:
        app: excalidraw
        component: room
    spec:
      containers:
        - name: room
          image: excalidraw/excalidraw-room:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 32Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 200m
