apps/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: draw.shedy.xyz
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: excalidraw-room
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
  tls:
    - hosts:
        - draw.shedy.xyz
      secretName: excalidraw-tls
